# case-unitech

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  git_setup.sh  pyproject.toml  requirements.txt
dags/: unimed_etl_dag.py
data/querys/: select.query
docker/airflow/: Dockerfile
docker/postgres/: init.sql
docs/: powerbi_guide.md
src/unimed_etl/: __init__.py  config.py  extract.py  load.py  quality.py  transform.py
tests/: test_transform.py
